final final final

--- a/index.html
+++ b/index.html
@@ -361,7 +361,8 @@ display: none;
 <h3>General info</h3>
 <ul>
 <li>GitHub repo (just to show the work): <a href="https://github.com/chilly-nk/list-am-scraper" class="uri">https://github.com/chilly-nk/list-am-scraper</a></li>
-<li>An example of scraped data is in ‘scraped_data.csv’</li>
+<li>An example of scraped data is in
+<strong>‘scraped_data.csv’</strong></li>
 </ul>
 </div>
 <div id="decide-what-to-scrape" class="section level3">
